@@ -1,8 +1,4 @@
 #!/usr/bin/env php
 <?php
 
-// change the following paths if necessary
-$yiic='{YiicPath}';
-$config=dirname(__FILE__).'/config/console.php';
-
-require_once($yiic);
+require_once(dirname(__FILE__).'/yiic.php');
