@@ -11,6 +11,6 @@ set BIN_PATH=%~dp0
 
 if "%PHP_COMMAND%" == "" set PHP_COMMAND=php.exe
 
-%PHP_COMMAND% "%BIN_PATH%yiic" %*
+%PHP_COMMAND% "%BIN_PATH%yiic.php" %*
 
 @endlocal
