@@ -1,0 +1,7 @@
+<?php
+
+// change the following paths if necessary
+$yiic='{YiicPath}';
+$config=dirname(__FILE__).'/config/console.php';
+
+require_once($yiic);
