@@ -5,6 +5,7 @@
 Version 1.0.2 to be released
 ----------------------------
 - Bug #81: Double backslashes in a clientscript became a singe backslash in the output (Qiang)
+- Bug #83: yiic command may unexpectedly render its starting line on Windows (Qiang)
 - Bug #87: yiic gives an error when using yiilite.php in the main application (Qiang)
 - Bug: CDbAuthManager::saveAuthAssignment() causes updating all rows (Qiang)
 - Bug: Fixed an issue in CUrlManager::createUrl when GET parameters contain arrays (Qiang)
